12 create cities repository from postrgrsql (#6)
* WIP creating cities repository

* finished implementation of cities repository

* delete imports